[runpugs] -clean up sessions/IP on timeout -first commit of generic Web::Terminal
git-svn-id: http://svn.pugscode.org/pugs@14366 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/data/runpugs.html
+++ b/misc/runpugs/data/runpugs.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<title>Run Perl6 Now!</title>
+<title>Run Perl 6 Now -- in your browser!</title>
 <link rel="stylesheet" type="text/css" href="/runpugs.css">
 <script language="JavaScript">
 
@@ -25,11 +25,11 @@ return true;
 </head>
 <body>
 <div id="mainwindow">
-<h1>Run Perl6 now -- in your browser!</h1>
+<h1>Run Perl 6 now -- in your browser!</h1>
 <p>This live web terminal runs the latest developement snapshot of
 the <a href="http://www.pugscode.org">pugs</a> interpreter for <a
-href="http://dev.perl.org/perl6/">Perl6</a>. For more information, read <a
-href="http://feather.perl6.nl/~andara/runpugs/">this</a>.
+href="http://dev.perl.org/perl 6/">Perl 6</a>. For more details, read the <a
+href="http://feather.perl6.nl/~andara/runpugs/">info page</a>.
 </p>
 <form style="text-align: center" id="term" name="terminal" action="/cgi-bin/runpugs" method="POST">                  
                                
