--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Run Perl6 Now -- in your browser!</title>
+<title>Run Perl 6 Now -- in your browser!</title>
 <link rel="stylesheet" type="text/css" href="runpugs.css">
 </head>
 <body>
 
 <div id="mainwindow">
-<h1>Run Perl6 now -- in your browser!</h1>
+<h1>Run Perl 6 now -- in your browser!</h1>
 
-<p>Welcome to <tt>runpugs</tt>, a web terminal for  <a href="http://www.pugscode.org">pugs</a>. Pugs is an implementation of  <a href="http://dev.perl.org/perl6/">Perl6</a> which aims to implement the full Perl6 specification.</p>
+<p>Welcome to <tt>runpugs</tt>, a web terminal for  <a href="http://www.pugscode.org">pugs</a>. Pugs is an implementation of  <a href="http://dev.perl.org/perl6/">Perl 6</a> which aims to implement the full Perl 6 specification.</p>
 <p><tt>runpugs</tt> currently lives <a
 href="http://feather.perl6.nl:8080/cgi-bin/runpugs">here</a>.</p>
 <p><em>Instructions:</em> <tt>runpugs</tt> presents the pugs interactive shell. Only
@@ -20,7 +20,7 @@ pugs session with <code>:q</code> before you close the browser window.<br>Type <
 <p>Because this is a web terminal, a number of restrictions apply:</p>
 
 <ul>
-<li>Pugs runs in <em>safe mode</em>, so system-related calls (including <code>say()</code>!) are disabled.</li>
+<li><The code>pugs</code> shell runs in <em>safe mode</em>, so system-related calls (including <code>say()</code>!) are disabled.</li>
 <li>If a call takes too long, the <code>pugs</code> session will time out.</li>
 <li>If left idle for too long, the <code>pugs</code> session will time out.</li>
 <li>The total number of sessions and number of sessions from a given IP address are limited.</li>
@@ -40,7 +40,7 @@ pugs session with <code>:q</code> before you close the browser window.<br>Type <
 <li>Unicode is not supported.</li>
 <li>There is no command history.</li>
 </ul>
-<p>You can find the source code for <tt>runpugs</tt> (in Perl5) in the <a href="http://svn.openfoundry.org/pugs/">pugs subversion repository</a> under <code>/misc/runpugs</code>.
+<p>You can find the source code for <tt>runpugs</tt> (in Perl 5) in the <a href="http://svn.openfoundry.org/pugs/">pugs subversion repository</a> under <code>/misc/runpugs</code>.
 <p>Thank you for trying <tt>pugs</tt> and <tt>runpugs</tt>!</p>
 <p class="copyright">&copy; Copyright 2006 by Wim Vanderbauwhede</p>
 </div>
