[runpugs] Now catches Unicode & apologises :-)
git-svn-id: http://svn.pugscode.org/pugs@14374 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -20,7 +20,7 @@ pugs session with <code>:q</code> before you close the browser window.<br>Type <
 <p>Because this is a web terminal, a number of restrictions apply:</p>
 
 <ul>
-<li><The code>pugs</code> shell runs in <em>safe mode</em>, so system-related calls (including <code>say()</code>!) are disabled.</li>
+<li><The code>pugs</code> shell runs in <em>safe mode</em>, so system-related calls are disabled.</li>
 <li>If a call takes too long, the <code>pugs</code> session will time out.</li>
 <li>If left idle for too long, the <code>pugs</code> session will time out.</li>
 <li>The total number of sessions and number of sessions from a given IP address are limited.</li>
