[runpugs.html] typo
git-svn-id: http://svn.pugscode.org/pugs@14380 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/data/runpugs.html
+++ b/misc/runpugs/data/runpugs.html
@@ -26,7 +26,7 @@ return true;
 <body>
 <div id="mainwindow">
 <h1>Run Perl 6 now -- in your browser!</h1>
-<p>This live web terminal runs the latest developement snapshot of
+<p>This live web terminal runs the latest development snapshot of
 the <a href="http://www.pugscode.org">pugs</a> interpreter for <a
 href="http://dev.perl.org/perl 6/">Perl 6</a>. For more details, read the <a
 href="http://feather.perl6.nl/~andara/runpugs/">info page</a>.
