--- a/misc/runpugs/data/runpugs.html
+++ b/misc/runpugs/data/runpugs.html
@@ -26,41 +26,33 @@ return true;
 <body>
 <div id="mainwindow">
 <h1>Run Perl 6 now -- in your browser!</h1>
-<p>This live web terminal runs the <a href="http://www.pugscode.org">pugs</a> interpreter for <a
-href="http://dev.perl.org/perl 6/">Perl 6</a>. For more details, read the <a
-href="http://feather.perl6.nl/~andara/runpugs/">info page</a>.
-</p>
-<p>By default, the Pugs session will use the <a
-href="http://search.cpan.org/search?query=perl6%3A%3Apugs&mode=module">latest
-release</a>. To use the latest development snapshot, change the setting
-below.</p>
 
 <form id="term" name="terminal" action="/cgi-bin/runpugs" method="POST">                  
-                               
 <input type="hidden" name="testing" value="_TESTING_">
 <input type="hidden" name="sessionid" value="">
 <input type="hidden"    name="action" value="runpugs">
-<!--<fieldset>-->
-<input type="radio" id="rel" value="0" name="reldev" _REL_ ><label
-for="rel">Release</label>&nbsp;&nbsp;
-<input type="radio" id="dev" value="1" name="reldev" _DEV_ ><label for="dev">Development</label>
-<!--</fieldset>-->
 <h2>Interactive Pugs Session</h2>
-<!--<textarea id="history" name="history"  rows="1" cols="1"
-style="overflow: hidden; border: 0px; width: 0px;
-font-size:0px">_CMD_</textarea>-->
-<!--<label for="cmd">Interactive Pugs Session<br>-->
-<textarea id="cmd" name="cmd" rows="24" cols="80" wrap="virtual" onKeyPress="return submitenter(this,event)">
+<!-- _MOTD_ -->
+<input type="radio" id="rel" value="0" name="reldev" _REL_ ><label
+for="rel">Release version</label>&nbsp;&nbsp;
+<input type="radio" id="dev" value="1" name="reldev" _DEV_ ><label
+for="dev">Development version</label>
+<div id="termwindow">
+<textarea id="cmd" name="cmd" rows="23" cols="80" wrap="virtual" onKeyPress="return submitenter(this,event)">
 pugs&gt;&nbsp;
 </textarea>
-<!--</label>-->
-<br>
+</div>
 <input id="enter" type="submit" value="Submit">&nbsp;&nbsp;&nbsp;
 </form>
 <script language="JavaScript">
 document.terminal.enter.style.display='none';
-document.terminal.cmd.focus()
+document.terminal.cmd.focus();
+document.terminal.cmd.scrollTop =document.terminal.cmd.scrollHeight;
 </script>
+<p>This live web terminal runs the <a href="http://www.pugscode.org">Pugs</a> interpreter for <a
+href="http://dev.perl.org/perl 6/">Perl 6</a>. Please <a
+href="http://feather.perl6.nl/~andara/runpugs/">read the documentation</a>.
+</p>
 <p class="copyright">&copy; Copyright 2006 by Wim Vanderbauwhede</p>
 </div>
 </body>
