* A few s/svn.openfoundry/svn.pugscode/
git-svn-id: http://svn.pugscode.org/pugs@14771 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -70,8 +70,8 @@ restrictive.</p>
 </ul>
 <h2>Source</h2>
 <p>You can find the source code for <tt>runpugs</tt> (in Perl 5) in the <a
-href="http://svn.openfoundry.org/pugs/">pugs subversion repository</a> under
-<code><a href="http://svn.openfoundry.org/pugs/misc/runpugs">/misc/runpugs</a></code>.
+href="http://svn.pugscode.org/pugs/">pugs subversion repository</a> under
+<code><a href="http://svn.pugscode.org/pugs/misc/runpugs">/misc/runpugs</a></code>.
 <p>Thank you for trying <tt>pugs</tt> and <tt>runpugs</tt>!</p>
 <p class="copyright">&copy; Copyright 2006 by Wim Vanderbauwhede</p>
 </div>
