[runpugs] -New user interface with continuous screen presence and other goodies -- "Ajax du pauvre" Try it out at http://feather.perl6.nl:8080/runpugs/
git-svn-id: http://svn.pugscode.org/pugs@14850 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/data/runpugs2s.html
+++ b/misc/runpugs/data/runpugs2s.html
@@ -98,7 +98,7 @@ _SCRIPT_
 document.terminal.script.focus()
 document.terminal.output.scrollTop =document.terminal.output.scrollHeight;
 </script>
-<p>This live web interface runs the <a href="http://www.pugscode.org">pugs</a>
+<p>This live web interface runs the <a href="http://www.pugscode.org">Pugs</a>
 interpreter for <a
 href="http://dev.perl.org/perl 6/">Perl 6</a>. Please <a
 href="http://feather.perl6.nl/~andara/runpugs/">read the documentation</a>.
