[runpugs] changed devel version URL
git-svn-id: http://svn.pugscode.org/pugs@14851 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -18,7 +18,7 @@ href="http://search.cpan.org/search?query=perl6%3A%3Apugs">latest
 release</a>. You can try the latest development snapshot of Pugs by selecting the 'Development' radio button.</p>
 <p>Don't hesitate to test the <em>development version</em> of
 <tt>runpugs</tt>:</p><ul><li>try the <a
-href="http://feather.perl6.nl:8080/cgi-bin/runpugs2">interactive session</a>
+href="http://feather.perl6.nl:8080/runpugs/">interactive session</a>
 with <em>command history</em></li> <li>or <a
 href="http://feather.perl6.nl:8080/cgi-bin/runpugs2?ia=0">run a full Perl 6
 script</a> in <em>non-interactive</em> mode.</li></ul>
