[runpugs] -Now with preloaded pugs sessions for faster startup.
git-svn-id: http://svn.pugscode.org/pugs@14930 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/htdocs/runpugs/index.html
+++ b/misc/runpugs/htdocs/runpugs/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<iframe src="/perl/runpugs.pl" id="scratch" name="scratch"
+<iframe src="/perl/runpugs3.pl" id="scratch" name="scratch"
 style="visibility:hidden" width="700px" height="1px"  onLoad="getreply()"></iframe>
 <div id="mainwindow">
 <h1>Run Perl 6 now -- in your browser!</h1>
