[runpugs] -be kind to feather: better management of preloaded sessions. Please test the devel version: http://feather.perl6.nl:8080/runpugs/ -fixed non-interactive runpugs, now at http://feather.perl6.nl:8080/cgi-bin/runp6script
git-svn-id: http://svn.pugscode.org/pugs@14954 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/data/runpugs.html
+++ b/misc/runpugs/data/runpugs.html
@@ -167,7 +167,8 @@ nchars=document.terminal.cmd.value.length;
 href="http://dev.perl.org/perl 6/">Perl&nbsp;6</a>. Please <a
 href="http://feather.perl6.nl/~andara/runpugs/">read the documentation</a>.
 </p>
-<p class="copyright">&copy; Copyright 2006 by Wim Vanderbauwhede</p>
+<p class="copyright">&copy; Copyright 2006 by Wim.Vanderbauwhede. Contact me
+at gmail.com.</p>
 </div>
 </body>
 </html>
