--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Run Perl 6 Now -- in your browser!</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="runpugs.css">
 </head>
 <body>
@@ -19,9 +21,12 @@ release</a>. You can try the latest development snapshot of Pugs by selecting th
 <p>Don't hesitate to test the <em>development version</em> of
 <tt>runpugs</tt>:</p><ul><li>try the <a
 href="http://feather.perl6.nl:8080/runpugs/">interactive session</a>
-with <em>command history</em></li> <li>or <a
-href="http://feather.perl6.nl:8080/cgi-bin/runpugs2?ia=0">run a full Perl 6
-script</a> in <em>non-interactive</em> mode.</li></ul>
+with command history, fast startup and response and a persistent interface; </li> 
+<li>or <a
+href="http://feather.perl6.nl:8080/cgi-bin/runp6script">run a full Perl 6
+script</a> in <em>non-interactive</em> mode.</li>
+
+</ul>
 
 <h2>Instructions</h2>
 <p><tt>runpugs</tt> presents the pugs interactive shell. Only
@@ -73,6 +78,7 @@ restrictive.</p>
 href="http://svn.pugscode.org/pugs/">pugs subversion repository</a> under
 <code><a href="http://svn.pugscode.org/pugs/misc/runpugs">/misc/runpugs</a></code>.
 <p>Thank you for trying <tt>pugs</tt> and <tt>runpugs</tt>!</p>
-<p class="copyright">&copy; Copyright 2006 by Wim Vanderbauwhede</p>
+<p class="copyright">&copy; Copyright 2006 by Wim.Vanderbauwhede. Contact me
+at gmail.com</p>
 </div>
 </body></html>
