Tpyo in runpugs help.
git-svn-id: http://svn.pugscode.org/pugs@14960 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/runpugs/htdocs/index.html
+++ b/misc/runpugs/htdocs/index.html
@@ -60,7 +60,7 @@ abort.</li>
 <li>Inactivity time-out: 10 minutes</li>
 <li>"Long" call time-out: 10 seconds</li>
 <li>Maximum number of lines of output: 250</li>
-<li>Maximum number of characters perl line of output: 250</li>
+<li>Maximum number of characters per line of output: 250</li>
 <li>Sessions per IP: 10</li>
 <li>Total number of sessions: 50</li>
 <li>Available memory: 64M.</li>
